styling to background and column seperation.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             <div class="card shadow p-3 mb-5 bg-white rounded text-center">
                 <div class="card-body">
                     <div id="passwordHelpBlock" class="form-text">
-
                         Please enter your required API key to continue and use this project.
                     </div><br>
                     <!-- <label for="password_input" class="form-label">Your API key</label> -->
@@ -51,7 +50,7 @@
                         <h2 class="accordion-header " id="headingOne">
                             <button class="accordion-button btn-secondary " type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Outage Information <strong> (STEP 1)</strong>
+                                Outage Information -  <strong> (STEP 1)</strong>
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -143,7 +142,7 @@
                             <button class="accordion-button btn-secondary collapsed" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="flase"
                                 aria-controls="collapseTwo">
-                                Baseline Information <strong>(STEP 2)</strong>
+                                Baseline Information -  <strong>(STEP 2)</strong>
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
