quick minor updates

--- a/index.html
+++ b/index.html
@@ -59,16 +59,19 @@
                             <div class="accordion-body">
                                 <div class="container-lg">
                                     <div class="row g-3">
+                                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+
+                                            <button class='btn me-md-2 btn-sm btn-outline-success'
+                                                onclick='testValues()'>Testing
+                                                Button -
+                                                POPULATE
+                                                WITH SOLE
+                                                FITNESS
+                                                VALUES</button>
+                                        </div>
                                         <h4>Outage Estimate Testing</h4>
-                                        <!-- <button type="button" onclick=" window.open('https://spoti.fi/3wq9qIU','_blank')"
-                                                class="btn btn-outline-secondary btn-sm">Testing Button - Populate random
-                                                Merchant Data
-                                                (experimental)</button> -->
-                                        <button class='btn-outline-success' onclick='testValues()'>Testing Button -
-                                            POPULATE
-                                            WITH SOLE
-                                            FITNESS
-                                            VALUES</button>
+
+
                                         <div class="col-md-5">
                                             <label for="merchantId" class="form-label">Merchant ID </label>
                                             <input type="text" class="form-control " id="merchantId" value="" required>
