--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                                 onclick='validateFirstStep()'>
                                                 To
                                                 Submit
-                                                Vaules</button>
+                                                Values</button>
                                         </div>
                                         <div id='hidebutton1' class="d-grid gap-2  col-6 mx-auto">
                                             <button class="btn disabled btn-success" id='firstStepComplete'
