--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                                 onclick='validateSecondStep()'>
                                                 To
                                                 Submit
-                                                Vaules</button>
+                                                Values</button>
                                         </div>
                                         <div id='hidebutton1' class="d-grid gap-2  col-6 mx-auto">
                                             <button class="btn disabled btn-success" id='SecondStepComplete'
