--- a/advanced.html
+++ b/advanced.html
@@ -5,6 +5,24 @@
 		<meta http-equiv="refresh" content="0;URL='https://spoti.fi/3wq9qIU'" />
 	</head>
 	<body>
-		<p>advanced</p>
+		<!-- <p>advanced</p>
+		<svg width="200" height="200">
+			<g transform="translate(50, 50)">
+				<rect x="0" y="0" width="100" height="100" fill="blue" />
+				// This is the body of the robot
+				<g transform="translate(75, 25)">
+					// This is the arm of the robot
+					<rect x="0" y="0" width="50" height="50" fill="red" />
+				</g>
+				<g transform="translate(-25, 25)">
+					// This is the arm of the robot
+					<rect x="0" y="0" width="50" height="50" fill="red" />
+				</g>
+				<g transform="translate(50, 100)">
+					// This is the arm of the robot
+					<rect x="0" y="0" width="50" height="50" fill="red" />
+				</g>
+			</g>
+		</svg> -->
 	</body>
 </html>
