--- a/advanced.html
+++ b/advanced.html
@@ -2,10 +2,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;URL='https://spoti.fi/3wq9qIU'" />
+		<!-- <meta http-equiv="refresh" content="0;URL='https://spoti.fi/3wq9qIU'" /> -->
 	</head>
 	<body>
-		<!-- <p>advanced</p>
+		<p>advanced</p>
 		<svg width="200" height="200">
 			<g transform="translate(50, 50)">
 				<rect x="0" y="0" width="100" height="100" fill="blue" />
@@ -23,6 +23,6 @@
 					<rect x="0" y="0" width="50" height="50" fill="red" />
 				</g>
 			</g>
-		</svg> -->
+		</svg>
 	</body>
 </html>
