looks good so far

--- a/index.html
+++ b/index.html
@@ -413,11 +413,17 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                         <table style="font-size: x-small; text-align:right" id='totals_table' class="table table-striped">
+                                        <div class="col-6">
+                                            <p> Based on the estimated Avererage Sales, the following totals can be attributed via a Batch Sales document:</p>
+
+                                        </div>
+                                         <div class="col-6">
+                                            
+                                        
+                                            <table style="font-size: x-small; text-align:right" id='totals_table' class="table table-striped">
                                                 <thead>
                                                     <tr>
                                                         <th>Estimated Totals</th>
-                                                        <!-- <th id="aaa">Merchant ID</th> -->
                                                     </tr>
                                                 </thead>
                                                 <tbody >
@@ -435,6 +441,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
+                                        </div>
                                     </div>
                                 </div>
 
