updated report to handle CA and AU accounts.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,26 @@
                                         <div class="col-md-5">
                                             <label for="merchantId" class="form-label">Merchant ID </label>
                                             <input type="text" class="form-control " id="merchantId" value="" required>
-                                            <br><br>
+                                            <br>
+                                            <h6>Select a Network</h6>
+												<div class="form-check">
+												  <input class="form-check-input" type="radio" name="networkRadio" id="networkRadioUS" 						value="US" checked>
+												  <label class="form-check-label" for="networkRadioUS">
+												    US Account
+												  </label>
+												</div>
+												<div class="form-check">
+												  <input class="form-check-input" type="radio" name="networkRadio" id="networkRadioCA" 						value="CA">
+												  <label class="form-check-label" for="networkRadioCA">
+												    CA Account
+												  </label>
+												</div>
+												<div class="form-check">
+												  <input class="form-check-input" type="radio" name="networkRadio" id="networkRadioAU" 	value="AU" >
+												  <label class="form-check-label" for="networkRadioAU">
+												    AU Account
+												  </label>
+												</div><br>
                                             <div class="input-group input-group-sm">
                                                 <label for="networkCommission" class="form-label">
                                                     NetworkCommission: 
